feat(payment): add create curency command
